--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <center>
     <h1 id="heading">Object Detection </h1>
     <br><br><br>
-    <a href="http://127.0.0.1:5500/index1.html">Plant</a>
+    <a href="index1.html">Plant</a>
     <br><br><br>
-    <a href="http://127.0.0.1:5500/index2.html">Flower Vase</a>
+    <a href="index2.html">Flower Vase</a>
     <br><br><br>
-    <a href="http://127.0.0.1:5500/index3.html">Tv</a>
+    <a href="index3.html">Tv</a>
     <br><br><br>
-    <a href="http://127.0.0.1:5500/index4.html">Fan</a>
+    <a href="index4.html">Fan</a>
     </center>
 </body>
